fix: add aspect ratio to map

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Loose Ends</title>
+    <title>Dungeon</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section id='map'></section>
+    <section id='actions'></section>
     <section id='log'></section>
   </body>
 </html>
