feat: add vitals

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,20 @@
   </head>
   <body>
     <section id='map'></section>
+    <section id='vitals'>
+      <div class='bar' id='health'>
+        <div class='fill'></div>
+        <span class='bar-text'>75/100</span>
+      </div>
+      <div class='bar' id='mana'>
+        <div class='fill'></div>
+        <span class='bar-text'>75/100</span>
+      </div>
+      <div class='bar' id='stamina'>
+        <div class='fill'></div>
+        <span class='bar-text'>75/100</span>
+      </div>
+    </section>
     <section id='actions'></section>
     <section id='log'></section>
   </body>
