--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel='stylesheet' href='styles.css'>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=open_withsettings" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=open_with,settings,touch_app,visibility" />
     <script src="index.js" type="module"></script>
   </head>
   <body>
@@ -26,6 +26,6 @@
       </div>
     </section>
     <section id='actions'></section>
-    <section id='log'></section>
+    <section id='logs'></section>
   </body>
 </html>
