--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="index.js" type="module"></script>
   </head>
   <body>
-    <section id='map'></section>
+    <section id='viewport'></section>
     <section id='vitals'>
       <div class='bar' id='health'>
         <div class='fill'></div>
