--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Dungeon</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel='stylesheet' href='styles.css'>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=open_with,settings,touch_app,visibility" />
-    <script src="index.js" type="module"></script>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=open_with,settings,touch_app,visibility"
+    />
+    <script src="./index.js" type="module"></script>
   </head>
   <body>
-    <section id='viewport'></section>
-    <section id='vitals'>
-      <div class='bar' id='health'>
-        <div class='fill'></div>
-        <span class='bar-text'>75/100</span>
+    <section id="viewport"></section>
+    <section id="vitals">
+      <div class="bar" id="health">
+        <div class="fill"></div>
+        <span class="bar-text">75/100</span>
       </div>
-      <div class='bar' id='mana'>
-        <div class='fill'></div>
-        <span class='bar-text'>75/100</span>
+      <div class="bar" id="mana">
+        <div class="fill"></div>
+        <span class="bar-text">75/100</span>
       </div>
-      <div class='bar' id='stamina'>
-        <div class='fill'></div>
-        <span class='bar-text'>75/100</span>
+      <div class="bar" id="stamina">
+        <div class="fill"></div>
+        <span class="bar-text">75/100</span>
       </div>
     </section>
-    <section id='actions'></section>
-    <section id='logs'></section>
+    <section id="actions"></section>
+    <section id="logs"></section>
   </body>
 </html>
