--- a/src/map.html
+++ b/src/map.html
@@ -7,7 +7,7 @@
 
     <script src="map.js" type="module"></script>
   </head>
-  <body style='background: black;'>
+  <body onload='init()' style='background: black;'>
     <canvas id='canvas' width='1000px' height='1000px'></canvas>
   </body>
 </html>
