feat: add attacking

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=open_with,settings,touch_app,visibility"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_selector_tool,front_hand,open_with,point_scan,settings,shield,swords,touch_app,visibility"
     />
     <script src="./index.js" type="module"></script>
   </head>
