--- a/src/map.html
+++ b/src/map.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Dungeon</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="map.js" type="module"></script>
   </head>
-  <body style='background: black;'>
-    <canvas id='canvas' width='1000px' height='1000px'></canvas>
+  <body style="background: black">
+    <canvas id="canvas" width="1000px" height="1000px"></canvas>
+    <section id="logs"></section>
   </body>
 </html>
+
