feat: add pointing finger

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,7 @@
           <span class="close-button material-symbols-outlined">close</span>
         </section>
         <section class="contents">
-          <span class="inventory-button material-symbols-outlined"
-            >pan_tool_alt</span
-          >
+          <span class="inventory-button pointing-finger"></span>
         </section>
       </div>
       <div id="game">
