--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <span class="close-button material-symbols-outlined">close</span>
         </section>
         <section class="contents">
-          <span class="inventory-button pointing-finger" data-item="pointing-finger"></span>
+          <span class="inventory-button empty-hand" data-item="empty-hand"></span>
         </section>
       </div>
       <div id="game">
