--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>Dungeon</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
@@ -11,9 +14,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_selector_tool,close,front_hand,open_with,pan_tool_alt,point_scan,settings,shield,swords,touch_app,visibility"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jacquard+12&&display=swap"
+      rel="stylesheet"
+    />
     <script src="./index.js" type="module"></script>
   </head>
   <body>
@@ -24,11 +30,19 @@
           <span class="close-button material-symbols-outlined">close</span>
         </section>
         <section class="contents">
-          <span class="inventory-button empty-hand" data-item="empty-hand"></span>
+          <span
+            class="inventory-button empty-hand"
+            data-item="empty-hand"
+          ></span>
         </section>
       </div>
       <div id="game">
         <section id="viewport"></section>
+        <section id="xp">
+          <div class="bar" id="xp-bar">
+            <div class="fill"></div>
+          </div>
+        </section>
         <section id="vitals">
           <div class="bar" id="health">
             <div class="fill"></div>
