--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jacquard+12&&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jacquard+12&family=Tiny5&display=swap"
       rel="stylesheet"
     />
     <script src="./index.js" type="module"></script>
   </head>
   <body>
     <main id="main">
+      <div id="level-up">
+        <section class="top-bar">
+          <h3>Level Up</h3>
+          <span id="points-remaining">Points Remaining: 2</span>
+        </section>
+        <section class="vbox">
+          <div class="stat">
+            <span>Agility</span>
+            <div class="stat-bar"></div>
+          </div>
+          <div class="stat">
+            <span>Constitution</span>
+            <div class="stat-bar"></div>
+          </div>
+          <div class="stat">
+            <span>Endurance</span>
+            <div class="stat-bar"></div>
+          </div>
+          <div class="stat">
+            <span>Intelligence</span>
+            <div class="stat-bar"></div>
+          </div>
+          <div class="stat">
+            <span>Strength</span>
+            <div class="stat-bar"></div>
+          </div>
+          <div class="stat">
+            <span>Wisdom</span>
+            <div class="stat-bar"></div>
+          </div>
+        </section>
+      </div>
       <div id="inventory" class="hidden">
         <section class="top-bar">
           <h3>Inventory</h3>
