--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_selector_tool,close,front_hand,open_with,pan_tool_alt,point_scan,settings,shield,swords,touch_app,visibility"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,arrow_selector_tool,close,front_hand,open_with,pan_tool_alt,point_scan,remove,settings,shield,swords,touch_app,visibility"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
