feat: implement stat assignment

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main id="main">
-      <div id="level-up">
+      <div id="level-up" class="hidden">
         <section class="top-bar">
           <h3>Level Up</h3>
           <span id="points-remaining">Points Remaining: 2</span>
