feat: add submit & close to stats

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,9 @@
     <main id="main">
       <div id="level-up" class="hidden">
         <section class="top-bar">
-          <h3>Level Up</h3>
+          <h3 class="title">Level Up</h3>
           <span id="points-remaining">Points Remaining: 2</span>
+          <span class="close-button material-symbols-outlined">close</span>
         </section>
         <section class="vbox">
           <div class="stat">
@@ -54,6 +55,7 @@
             <span>Wisdom</span>
             <div class="stat-bar"></div>
           </div>
+          <button class="submit">Confirm</button>
         </section>
       </div>
       <div id="inventory" class="hidden">
