feat: show room name on entrance/exit

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,10 @@
         </section>
       </div>
       <div id="game">
+        <div id="title" class="fade hidden">
+          <span>Now Entering...</span>
+          <h1>Adventurer's Birth</h1>
+        </div>
         <section id="viewport"></section>
         <section id="xp">
           <div class="bar" id="xp-bar">
