feat: add main menu

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,18 @@
         <section id="actions"></section>
         <section id="logs"></section>
       </div>
+      <div id="main-menu">
+        <div class="game-title">Dungeon</div>
+        <div class="buttons">
+          <button id="main-menu-new-game">New Game</button>
+          <button id="main-menu-continue">Continue</button>
+          <button id="main-menu-settings" disabled>Settings</button>
+          <button id="main-menu-wiki" disabled>Wiki</button>
+        </div>
+        <div class="footer">
+          <span class="version">1.0.0-alpha</span>
+        </div>
+      </div>
     </main>
   </body>
 </html>
