--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,arrow_selector_tool,close,front_hand,open_with,pan_tool_alt,point_scan,remove,settings,shield,swords,touch_app,visibility"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,arrow_selector_tool,close,directions_run,directions_walk,front_hand,open_with,pan_tool_alt,point_scan,remove,settings,shield,swords,touch_app,visibility"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -103,7 +103,7 @@
         <div class="buttons">
           <button id="main-menu-new-game">New Game</button>
           <button id="main-menu-continue">Continue</button>
-          <button id="main-menu-settings" disabled>Settings</button>
+          <button id="main-menu-settings">Settings</button>
           <button id="main-menu-wiki" disabled>Wiki</button>
         </div>
         <div class="footer">
@@ -162,8 +162,23 @@
         <div class="buttons">
           <button id="pause-menu-resume">Resume</button>
           <button id="pause-menu-main-menu">Main Menu</button>
-          <button id="pause-menu-settings" disabled>Settings</button>
+          <button id="pause-menu-settings">Settings</button>
           <button id="pause-menu-wiki" disabled>Wiki</button>
+        </div>
+        <div class="footer">
+          <span class="version"></span>
+        </div>
+      </div>
+      <div id="settings-menu" class="hidden">
+        <h1>Settings</h1>
+        <section class="vbox">
+          <div class="stat">
+            <span>Game Speed</span>
+            <div class="stat-bar" id="game-speed"></div>
+          </div>
+        </section>
+        <div class="buttons">
+          <button id="settings-menu-back">Back</button>
         </div>
         <div class="footer">
           <span class="version"></span>
