feat: make skills selectable

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           <button class="submit">Confirm</button>
         </section>
       </div>
-      <div id="inventory" class="hidden">
+      <div id="inventory" class="hidden item-holder">
         <section class="top-bar">
           <h3>Inventory</h3>
           <span class="close-button material-symbols-outlined">close</span>
@@ -69,6 +69,13 @@
             data-item="empty-hand"
           ></span>
         </section>
+      </div>
+      <div id="skills" class="hidden item-holder">
+        <section class="top-bar">
+          <h3>Skills</h3>
+          <span class="close-button material-symbols-outlined">close</span>
+        </section>
+        <section class="contents"></section>
       </div>
       <div id="game">
         <div id="title" class="fade hidden">
