fix(rest): invert full rest logic

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Jacquard+12&family=Tiny5&display=swap"
       rel="stylesheet"
     />
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js?v=2.2.4-alpha" type="module"></script>
   </head>
   <body>
     <main id="main" class="hidden">
