feat: add equipment menu

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,25 @@
           <button class="submit">Confirm</button>
         </section>
       </div>
+      <div id="equipment" class="hidden item-holder">
+        <section class="top-bar">
+          <h3>Equipment</h3>
+          <span class="close-button material-symbols-outlined">close</span>
+        </section>
+        <div class="vbox">
+          <section class="character">
+            <img id="person" src="images/person.svg" />
+            <span class="head slot"></span>
+            <span class="chest slot"></span>
+            <span class="legs slot"></span>
+            <span class="hands slot left"></span>
+            <span class="hands slot right"></span>
+            <span class="feet slot left"></span>
+            <span class="feet slot right"></span>
+          </section>
+          <section class="contents"></section>
+        </div>
+      </div>
       <div id="inventory" class="hidden item-holder">
         <section class="top-bar">
           <h3>Inventory</h3>
