--- a/src/index.html
+++ b/src/index.html
@@ -174,8 +174,20 @@
                 <option value="constitution">Farmer (+1 Constitution)</option>
                 <option value="endurance">Laborer (+1 Endurance)</option>
                 <option value="intelligence">Scholar (+1 Intelligence)</option>
-                <option value="strength">Soldier (+1 Strength)</option>
+                <option value="strength">Barbarian (+1 Strength)</option>
                 <option value="wisdom">Sage (+1 Wisdom)</option>
+              </select>
+            </fieldset>
+            <fieldset>
+              <legend>Class</legend>
+              <select value="untrained" id="player-class">
+                <option value="untrained">Untrained</option>
+                <option value="rogue">Rogue</option>
+                <option value="monk">Monk</option>
+                <option value="knight">Knight</option>
+                <option value="mage">Mage</option>
+                <option value="warrior">Warrior</option>
+                <option value="ranger">Ranger</option>
               </select>
             </fieldset>
           </div>
