chore: rework class options

--- a/src/index.html
+++ b/src/index.html
@@ -183,11 +183,11 @@
               <select value="untrained" id="player-class">
                 <option value="untrained">Untrained</option>
                 <option value="rogue">Rogue</option>
-                <option value="monk">Monk</option>
                 <option value="knight">Knight</option>
-                <option value="mage">Mage</option>
-                <option value="warrior">Warrior</option>
                 <option value="ranger">Ranger</option>
+                <option value="sorcerer">Sorcerer</option>
+                <option value="warrior">Warrior</option>
+                <option value="wizard">Wizard</option>
               </select>
             </fieldset>
           </div>
